--- a/nth/templates/nth/home.html
+++ b/nth/templates/nth/home.html
@@ -16,7 +16,7 @@
   <link href="{% static 'assets/vendor/nucleo/css/nucleo.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="{% static 'assets/css/argon.css?v=1.1.0' %}" rel="stylesheet">
+  <link type="text/css" href="../static/assets/css/argon.css?v=1.1.0" rel="stylesheet">
 </head>
 
 <body id="home">
@@ -25,7 +25,7 @@
     <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom fixed-top" style="position: fixed;">
       <div class="container">
         <a class="navbar-brand mr-lg-5" href="#home"> <!-- href to same page -->
-          <img src="../assets/img/brand/nth_logo.png" style="scale: 2;" alt="NTH Logo"> <!-- NTH Logo comes here-->
+          <img src="{% static 'assets/img/brand/nth_logo.png' %}" style="scale: 2;" alt="NTH Logo"> <!-- NTH Logo comes here-->
         </a>
         <button class="navbar-toggler mr-rg-auto" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -128,10 +128,10 @@
       </div>
       <!-- NTH home start -->
       <div style="text-align: center; padding-top: 20px;padding-bottom: 20px;">
-        <img src="../assets/img/brand/nth_logo.png" height="400px" width="400px" alt="NTH Logo"> <!-- NTH Logo -->
+        <img src="{% static 'assets/img/brand/nth_logo.png' %}" height="400px" width="400px" alt="NTH Logo"> <!-- NTH Logo -->
         <p style="font-size: x-large;color: whitesmoke;">Network Treasure Hunt</p>
         <p style="font-size: large;color: whitesmoke;">Decrypt the Encrypted!</p>
-        <a class="btn btn-primary" type="submit" href="#">Start Hunting!</a> <!-- Login View -->
+        <a class="btn btn-primary" type="submit" href="/login/">Start Hunting!</a> <!-- Login View -->
       </div>
       <!-- NTH home end -->
       <!-- Registration Start -->
@@ -163,7 +163,8 @@
             <div class="col" style="padding: 20px;">
               <div class="card bg-secondary shadow border-0" style="height: 700px;padding-top: 20px;">
                 <div class="card-body px-lg-5 py-lg-5">
-                  <form action="#" method="POST"> <!-- Create Player View -->
+                  <form action="{% url 'nth:Home' %}" method="POST"> <!-- Create Player View -->
+                    {% csrf_token %}
                     <div class="form-group">
                       <div class="input-group input-group-alternative mb-3">
                         <div class="input-group-prepend">
@@ -231,7 +232,7 @@
           </div>
           <div class="row justify-content-left">
             <div class="col-rg">
-              <img src="../assets/img/brand/nth_logo.png" height="400px" width="400px" alt="NTH Logo">
+              <img src="{% static 'assets/img/brand/nth_logo.png' %}" height="400px" width="400px" alt="NTH Logo">
             </div>
             <div class="col-lg">
               <div class="text-center text-muted mb-4">
@@ -257,14 +258,14 @@
           <div class="row justify-content-center">
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../assets/img/nth_team/shubham.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="{% static 'assets/img/nth_team/shubham.jpg' %}" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Shubham Chorage</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-9657979483</i>
               </div>
             </div>
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../assets/img/nth_team/krisha.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="{% static 'assets/img/nth_team/krisha.jpg' %}" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Krisha Bhambani</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-9923635154</i>
               </div>
@@ -273,21 +274,21 @@
           <div class="row justify-content-center" style="padding-top: 20px;">
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../assets/img/nth_team/prajwal.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="{% static 'assets/img/nth_team/prajwal.jpg' %}" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Prajwal Patankar</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-8888726344</i>
               </div>
             </div>
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../assets/img/nth_team/garvita.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="{% static 'assets/img/nth_team/garvita.jpg' %}" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Garvita Jain</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-8989553238</i>
               </div>
             </div>
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 300px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../assets/img/nth_team/monu.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="{% static 'assets/img/nth_team/monu.jpg' %}" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Anuraag Shankar</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-9545070825</i>
               </div>
@@ -301,13 +302,13 @@
     <div class="container">
       <div class="row">
         <div class="col" style="padding: 20px;">
-          <img src="../assets/img/brand/ieee_logo.png" style="scale: 0.8;">
+          <img src="{% static 'assets/img/brand/ieee_logo.png' %}" style="scale: 0.8;">
         </div>
         <div class="col" style="color:whitesmoke; font-size: 20px; padding: 20px;">
           Designed by WebTeam@PISB
         </div>
         <div class="col" style="padding: 20px;">
-          <img src="../assets/img/brand/pisb_logo.png" height="75px" width="225px">
+          <img src="{% static 'assets/img/brand/pisb_logo.png' %}" height="75px" width="225px">
         </div>
       </div>
     </div>
