--- a/nth/templates/nth/home.html
+++ b/nth/templates/nth/home.html
@@ -16,7 +16,7 @@
   <link href="{% static 'assets/vendor/nucleo/css/nucleo.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="../static/assets/css/argon.css?v=1.1.0" rel="stylesheet">
+  <link type="text/css" href="{% static 'assets/css/argon.css' %}" rel="stylesheet">
 </head>
 
 <body id="home">
