--- a/nth/templates/nth/home.html
+++ b/nth/templates/nth/home.html
@@ -105,7 +105,13 @@
             </button>
           </div>
           <div class="modal-body">
-            ... <!-- Leaderboard Code -->
+            <!-- Leaderboard Code -->
+            <table border="0">
+              <thead style="font-size: 20px;color: #32325d;"><td>Player</td><td style="padding-left: 30px;">Level</td></thead>
+              {% for player in leaderboard %}
+              <tr><td>{{ player.user.username }}</td><td style="padding-left: 30px;">{{ player.level }}</td></tr>
+              {% endfor %}
+            </table>
           </div>
         </div>
       </div>
