--- a/nth/templates/nth/home.html
+++ b/nth/templates/nth/home.html
@@ -85,7 +85,7 @@
             </li>
           </ul>
           <ul class="navbar-nav ml-lg-auto">
-            <img src="#" alt="CTD Logo">
+            <img src="{% static 'assets/img/brand/ctd_logo.png' %}" height="75px" width="150px" alt="CTD Logo">
           </ul>
         </div>
       </div>
