--- a/nth/templates/nth/level4.html
+++ b/nth/templates/nth/level4.html
@@ -274,7 +274,7 @@
 </head>
 
 <body id="home" style="background-color:#5e72e4; color: whitesmoke;">
-  <img src="CTD Logo" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
+  <img src="{% static 'assets/img/brand/ctd_logo.png' %}" height="60px" width="120px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
   <img src="{% static 'assets/img/brand/pisb_logo.png' %}" width="120" height="40" alt="PISB Logo" style="top: 0;right: 0;position: absolute;">
   <br>
   <div style="text-align:center;font-size: xx-large;margin: 0;"><u>LEVEL 04</u></div>
