--- a/nth/templates/nth/level3.html
+++ b/nth/templates/nth/level3.html
@@ -367,8 +367,8 @@
                 </div>
                 <div class="modal-body" style="color: #32325d;">
                 <!-- Contact Us -->
-                Shubham Chorage: +91-9657979483 <br>
-                Anuraag Shankar: +91-9545070825
+                Prajwal Patankar: +91-8888726344 <br>
+                Garvita Jain: +91-8989553238
                 </div>
             </div>
         </div>
