--- a/nth/templates/nth/level3.html
+++ b/nth/templates/nth/level3.html
@@ -275,7 +275,7 @@
 
 <body id="home" style="background-color:#5e72e4; color: whitesmoke;">
   <img src="{% static 'assets/img/brand/ctd_logo.png' %}" height="60px" width="120px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
-  <img src="{% static 'assets/img/brand/pisb_logo.png' %}" width="120" height="40" alt="PISB Logo" style="top: 0;right: 0;position: absolute;">
+  <img src="{% static 'assets/img/brand/pisb_logo.png' %}" width="150" height="50" alt="PISB Logo" style="top: 0;right: 0.4%;position: absolute;">
   <br>
   <div style="text-align:center;font-size: xx-large;margin: 0;"><u>LEVEL 03</u></div>
     
@@ -398,7 +398,7 @@
     </div>
 
   <footer class="footer" style="background-color: #5e72e4;">
-    <div style="position: absolute;top: 86%;left: 50%;transform: translateX(-50%);">
+    <div style="position: absolute;top: 93%;left: 50%;transform: translateX(-50%);">
       <div style="width:100%">
         <a href="https://www.facebook.com/NTHCredenz/" title="Like us on Facebook">
           <i class="fa fa-facebook-square" style="scale: 3;color: whitesmoke;"></i>
