--- a/nth/templates/nth/login.html
+++ b/nth/templates/nth/login.html
@@ -34,40 +34,38 @@
       <div class="container pt-lg-md">
         <div class="row justify-content-center">
           <div class="col" style="padding: 20px;">
-            <div class="card bg-secondary shadow border-0">
-              <div class="card-header bg-default pb-5" style="height: 700px;">
-                <div style="text-align: center;"><img src="{% static 'assets/img/brand/nth_logo.png' %}" height="300" width="300" alt="NTH Logo"></div>
-                <div class="text-center text-muted mb-4" style="font-size: 28px;">
-                    <u>Sign In</u>
-                </div>
-                <form action="{% url 'nth:Login' %}" method="POST"> <!-- Post-Login-->
-                  {% csrf_token %}
-                  {% for message in messages %}
-                      <font color="whitesmoke" face="consolas">
-                        {{ message }} <br>
-                      </font>
-                  {% endfor %}
-                  <div class="form-group mb-3">
-                    <div class="input-group input-group-alternative">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="ni ni-single-02"></i></span>
-                      </div>
-                      <input class="form-control" placeholder="Username" type="text" name="username" style="color: #525f7f" onfocus="">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="input-group input-group-alternative">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                      </div>
-                      <input class="form-control" placeholder="Password" type="password" name="password" style="color: #525f7f ">
-                    </div>
-                  </div>
-                  <div class="text-center">
-                    <button type="submit" class="btn btn-primary my-4">Sign in</button>
-                  </div>
-                </form>
+            <div class="card-header bg-default pb-5" style="height: 700px;">
+              <div style="text-align: center;"><img src="{% static 'assets/img/brand/nth_logo.png' %}" height="300" width="300" alt="NTH Logo"></div>
+              <div class="text-center text-muted mb-4" style="font-size: 28px;">
+                  <u>Sign In</u>
               </div>
+              <form action="{% url 'nth:Login' %}" method="POST"> <!-- Post-Login-->
+                {% csrf_token %}
+                {% for message in messages %}
+                    <font color="whitesmoke" face="consolas">
+                      {{ message }} <br>
+                    </font>
+                {% endfor %}
+                <div class="form-group mb-3">
+                  <div class="input-group input-group-alternative">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="ni ni-single-02"></i></span>
+                    </div>
+                    <input class="form-control" placeholder="Username" type="text" name="username" style="color: #525f7f" onfocus="">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="input-group input-group-alternative">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                    </div>
+                    <input class="form-control" placeholder="Password" type="password" name="password" style="color: #525f7f ">
+                  </div>
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="btn btn-primary my-4">Sign in</button>
+                </div>
+              </form>
             </div>
           </div>
           <div class="col" style="padding: 20px;">
@@ -96,7 +94,7 @@
         <div class="col" style="padding: 20px;">
           <img src="{% static 'assets/img/brand/ieee_logo.png' %}" style="scale: 0.8;">
         </div>
-        <div class="col" style="color:whitesmoke; font-size: 20px; padding: 20px;">
+        <div class="col" style="color:whitesmoke; font-size: 20px; padding-top: 40px;padding-right: 40px;">
           Designed by WebTeam@PISB
         </div>
         <div class="col" style="padding: 20px;">
@@ -111,7 +109,7 @@
   <script src="{% static 'assets/vendor/bootstrap/bootstrap.min.js' %}"></script>
   <script src="{% static 'assets/vendor/headroom/headroom.min.js' %}"></script>
   <!-- Argon JS -->
-  <script src="{% static 'assets/js/argon.js?v=1.1.0' %}"></script>
+  <script src="{% static 'assets/js/argon.js' %}"></script>
 </body>
 
 </html>
