mob view changes

--- a/nth/templates/nth/level5.html
+++ b/nth/templates/nth/level5.html
@@ -274,8 +274,14 @@
 </head>
 
 <body id="home" style="background-color:#5e72e4; color: whitesmoke;">
-  <img src="{% static 'assets/img/brand/ctd_logo.png' %}" height="60px" width="120px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
-  <img src="{% static 'assets/img/brand/pisb_logo.png' %}" width="150" height="50" alt="PISB Logo" style="top: 0;right: 0.4%;position: absolute;">
+  <div class="web">
+    <img src="{% static 'assets/img/brand/ctd_logo.png' %}" height="60px" width="120px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
+    <img src="{% static 'assets/img/brand/pisb_logo.png' %}" width="150" height="50" alt="PISB Logo" style="top: 0;right: 0.4%;position: absolute;">
+  </div>
+  <div class="mob">
+    <img src="{% static 'assets/img/brand/ctd_logo.png' %}" height="40px" width="80px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
+    <img src="{% static 'assets/img/brand/pisb_logo.png' %}" width="100" height="34" alt="PISB Logo" style="top: 0;right: 0.4%;position: absolute;">
+  </div>
   <br>
   <div style="text-align:center;font-size: xx-large;margin: 0;"><u>LEVEL 05</u></div>
     
