--- a/nth/templates/nth/level_non_static.html
+++ b/nth/templates/nth/level_non_static.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,14 +7,14 @@
   <meta name="author" content="NTH">
   <title>Network Treasure Hunt</title>
   <!-- Favicon -->
-  <link href="{% static 'assets/img/brand/nth_logo.png' %}" rel="icon" type="image/png">
+  <link href="../../static/assets/img/brand/nth_logo.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
-  <link href="{% static 'assets/vendor/nucleo/css/nucleo.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
+  <link href="../../static/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="../../static/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="{% static 'assets/css/argon.css' %}" rel="stylesheet">
+  <link type="text/css" href="../../static/assets/css/argon.css" rel="stylesheet">
   <style type="text/css">
     @import url(http://fonts.googleapis.com/css?family=Lato:300,400);
     body {
@@ -275,14 +274,14 @@
 
 <body id="home" style="background-color:#5e72e4; color: whitesmoke;">
   <div class="web">
-    <img src="{% static 'assets/img/brand/ctd_logo.png' %}" height="60px" width="120px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
-    <img src="{% static 'assets/img/brand/pisb_logo.png' %}" width="150" height="50" alt="PISB Logo" style="top: 0;right: 0.4%;position: absolute;">
+    <img src="../../static/assets/img/brand/ctd_logo.png" height="60px" width="120px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
+    <img src="../../static/assets/img/brand/pisb_logo.png" width="150" height="50" alt="PISB Logo" style="top: 0;right: 0.4%;position: absolute;">
   </div>
   <div class="mob">
-    <img src="{% static 'assets/img/brand/ctd_logo.png' %}" height="40px" width="80px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
-    <img src="{% static 'assets/img/brand/pisb_logo.png' %}" width="100" height="34" alt="PISB Logo" style="top: 0;right: 0.4%;position: absolute;">
+    <img src="../../static/assets/img/brand/ctd_logo.png" height="40px" width="80px" alt="CTD Logo" style="top: 0;left: 0;position: absolute;">
+    <img src="../../static/assets/img/brand/pisb_logo.png" width="100" height="34" alt="PISB Logo" style="top: 0;right: 0.4%;position: absolute;">
   </div><br>
-  <div style="text-align:center;font-size: xx-large;margin: 0;"><u>LEVEL 01</u></div>
+  <div style="text-align:center;font-size: xx-large;margin: 0;"><u>LEVEL 00</u></div>
     
   <!-- Question Start -->
   <!-- Web Question Here -->
@@ -331,9 +330,7 @@
                 <!-- Leaderboard -->
                 <table border="0">
                     <thead style="font-size: 20px;color: #32325d;"><td>Player</td><td style="padding-left: 30px;">Level</td></thead>
-                    {% for p in leaderboard %}
-                    <tr><td>{{ p.player.user.username }}</td><td style="padding-left: 30px;">{{ p.player.level }}</td></tr>
-                    {% endfor %}
+                    
                 </table>
                 </div>
             </div>
@@ -390,10 +387,6 @@
                 </div>
                 <div class="modal-body" style="color: #32325d;">
                 <!-- User Profile -->
-                Username: {{ player.user.username }} <br>
-                Name: {{ player.user.first_name }} {{ player.user.last_name }} <br>
-                Level: {{ player.level }} <br>
-                Rank: {{ rank }} <br>
                 </div>
                 <div class="modal-footer">
                     <a class="btn btn-primary" type="submit" href="/logout/">Logout</a>
@@ -418,11 +411,11 @@
     </div>
   </footer>
   <!-- Core -->
-  <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/popper/popper.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/bootstrap/bootstrap.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/headroom/headroom.min.js' %}"></script>
+  <script src="../../static/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="../../static/assets/vendor/popper/popper.min.js"></script>
+  <script src="../../static/assets/vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="../../static/assets/vendor/headroom/headroom.min.js"></script>
   <!-- Argon JS -->
-  <script src="{% static 'assets/js/argon.js?v=1.1.0' %}"></script>
+  <script src="../../static/assets/js/argon.js?v=1.1.0"></script>
 </body>
 </html>
