--- a/templates/login_non_static.html
+++ b/templates/login_non_static.html
@@ -7,14 +7,14 @@
   <meta name="author" content="NTH">
   <title>Network Treasure Hunt</title>
   <!-- Favicon -->
-  <link href="../../static/assets/img/brand/nth_logo.png" rel="icon" type="image/png">
+  <link href="../nth/static/assets/img/brand/nth_logo.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
-  <link href="../../static/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="../../static/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../nth/static/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="../nth/static/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="../../static/assets/css/argon.css" rel="stylesheet">
+  <link type="text/css" href="../nth/static/assets/css/argon.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <div class="row justify-content-center">
           <div class="col" style="padding: 20px;">
             <div class="card-header bg-default pb-5" style="height: 700px;">
-              <div style="text-align: center;"><img src="../../static/assets/img/brand/nth_logo.png" height="300" width="300" alt="NTH Logo"></div>
+              <div style="text-align: center;"><img src="../nth/static/assets/img/brand/nth_logo.png" height="300" width="300" alt="NTH Logo"></div>
               <div class="text-center text-muted mb-4" style="font-size: 28px;">
                   <u>Sign In</u>
               </div>
@@ -85,24 +85,24 @@
     <div class="container">
       <div class="row">
         <div class="col" style="padding: 20px;">
-          <img src="../../static/assets/img/brand/ieee_logo.png" style="scale: 0.8;">
+          <img src="../nth/static/assets/img/brand/ieee_logo.png" style="scale: 0.8;">
         </div>
         <div class="col" style="color:whitesmoke; font-size: 20px; padding-top: 40px;padding-right: 40px;">
           Designed by WebTeam@PISB
         </div>
         <div class="col" style="padding: 20px;">
-          <img src="../../static/assets/img/brand/pisb_logo.png" height="75px" width="225px">
+          <img src="../nth/static/assets/img/brand/pisb_logo.png" height="75px" width="225px">
         </div>
       </div>
     </div>
   </footer>
   <!-- Core -->
-  <script src="../../static/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="../../static/assets/vendor/popper/popper.min.js"></script>
-  <script src="../../static/assets/vendor/bootstrap/bootstrap.min.js"></script>
-  <script src="../../static/assets/vendor/headroom/headroom.min.js"></script>
+  <script src="../nth/static/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="../nth/static/assets/vendor/popper/popper.min.js"></script>
+  <script src="../nth/static/assets/vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="../nth/static/assets/vendor/headroom/headroom.min.js"></script>
   <!-- Argon JS -->
-  <script src="../../static/assets/js/argon.js"></script>
+  <script src="../nth/static/assets/js/argon.js"></script>
 </body>
 
 </html>
