--- a/templates/home_non_static.html
+++ b/templates/home_non_static.html
@@ -7,14 +7,14 @@
   <meta name="author" content="NTH">
   <title>Network Treasure Hunt</title>
   <!-- Favicon -->
-  <link href="../../static/assets/img/brand/nth_logo.png" rel="icon" type="image/png">
+  <link href="../nth/static/assets/img/brand/nth_logo.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
-  <link href="../../static/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="../../static/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../nth/static/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="../nth/static/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Argon CSS -->
-  <link type="text/css" href="../../static/assets/css/argon.css" rel="stylesheet">
+  <link type="text/css" href="../nth/static/assets/css/argon.css" rel="stylesheet">
 </head>
 
 <body id="home">
@@ -83,7 +83,7 @@
             </li>
           </ul>
           <ul class="navbar-nav ml-lg-auto">
-            <img src="../../static/assets/img/brand/ctd_logo.png" height="75px" width="150px" alt="CTD Logo">
+            <img src="../nth/static/assets/img/brand/ctd_logo.png" height="75px" width="150px" alt="CTD Logo">
           </ul>
         </div>
       </div>
@@ -127,7 +127,7 @@
       </div>
       <!-- NTH home start -->
       <div style="text-align: center; padding-top: 20px;padding-bottom: 20px;">
-        <img src="../../static/assets/img/brand/nth_logo.png" height="400px" width="400px" alt="NTH Logo"> <!-- NTH Logo -->
+        <img src="../nth/static/assets/img/brand/nth_logo.png" height="400px" width="400px" alt="NTH Logo"> <!-- NTH Logo -->
         <p style="font-size: x-large;color: whitesmoke;">Network Treasure Hunt</p>
         <p style="font-size: large;color: whitesmoke;">Decrypt the Encrypted!</p>
         <a class="btn btn-primary" type="submit" href="/login/" style="height: 60px; padding-top: 17px;">Start Hunting!</a> <!-- Login View -->
@@ -233,7 +233,7 @@
           </div>
           <div class="row justify-content-left">
             <div class="col-rg" style="width: 350px;">
-              <img src="../../static/assets/img/brand/nth_logo.png" height="400px" width="400px" alt="NTH Logo">
+              <img src="../nth/static/assets/img/brand/nth_logo.png" height="400px" width="400px" alt="NTH Logo">
             </div>
             <div class="col-lg">
               <div class="text-center text-muted mb-4">
@@ -259,14 +259,14 @@
           <div class="row justify-content-center">
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 350px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../../static/assets/img/nth_team/krisha.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="../nth/static/assets/img/nth_team/krisha.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Krisha Bhambani</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-9923635154</i>
               </div>
             </div>
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 350px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../../static/assets/img/nth_team/shubham.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="../nth/static/assets/img/nth_team/shubham.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Shubham Chorage</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-9657979483</i>
               </div>
@@ -275,21 +275,21 @@
           <div class="row justify-content-center" style="padding-top: 20px;">
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 350px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../../static/assets/img/nth_team/prajwal.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="../nth/static/assets/img/nth_team/prajwal.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Prajwal Patankar</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-8888726344</i>
               </div>
             </div>
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 350px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../../static/assets/img/nth_team/garvita.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="../nth/static/assets/img/nth_team/garvita.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Garvita Jain</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-8989553238</i>
               </div>
             </div>
             <div class="col-rg-5" style="padding: 20px;">
               <div class="card shadow border-0" style="background-color: rgba(82,95,127,0.5);height: 350px;width: 250px;text-align: center;padding-left: 20px;padding-right: 20px;padding-bottom: 20px;padding-top: 20px;">
-                <img src="../../static/assets/img/nth_team/monu.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
+                <img src="../nth/static/assets/img/nth_team/monu.jpg" height="200px" width="200px" style="border-radius: 50%;"><br>
                 <p style="color: #dee2e6;font-size: 20px;line-height: 30px;">Anuraag Shankar</p>
                 <i class="ni ni-mobile-button" style="color: #dee2e6; font-size: 18px;">+91-9545070825</i>
               </div>
@@ -303,23 +303,23 @@
     <div class="container">
       <div class="row">
         <div class="col" style="padding: 20px;">
-          <img src="../../static/assets/img/brand/ieee_logo.png" style="scale: 0.8;">
+          <img src="../nth/static/assets/img/brand/ieee_logo.png" style="scale: 0.8;">
         </div>
         <div class="col" style="color:whitesmoke; font-size: 20px; padding-top: 40px;padding-right: 40px;">
           Designed by WebTeam@PISB
         </div>
         <div class="col" style="padding: 20px;">
-          <img src="../../static/assets/img/brand/pisb_logo.png" height="75px" width="225px">
+          <img src="../nth/static/assets/img/brand/pisb_logo.png" height="75px" width="225px">
         </div>
       </div>
     </div>
   </footer>
   <!-- Core -->
-  <script src="../../static/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="../../static/assets/vendor/popper/popper.min.js"></script>
-  <script src="../../static/assets/vendor/bootstrap/bootstrap.min.js"></script>
-  <script src="../../static/assets/vendor/headroom/headroom.min.js"></script>
+  <script src="../nth/static/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="../nth/static/assets/vendor/popper/popper.min.js"></script>
+  <script src="../nth/static/assets/vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="../nth/static/assets/vendor/headroom/headroom.min.js"></script>
   <!-- Argon JS -->
-  <script src="../../static/assets/js/argon.js"></script>
+  <script src="../nth/static/assets/js/argon.js"></script>
 </body>
 </html>
